# AGenshinDot

./: .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
agenshindot/: __init__.py  __main__.py  config.py  log.py  main.py  typing.py
agenshindot/database/: __init__.py  engine.py
agenshindot/database/action/: __init__.py  id_and_cookie.py
agenshindot/database/model/: __init__.py  id_and_cookie.py
agenshindot/modules/: bind.py  check_cookie.py  console.py  wiki_weapon.py
agenshindot/modules/mihoyo_bbs/: __init__.py  data.py  draw.py
agenshindot/modules/wiki/: __init__.py  data.py
agenshindot/utils/: __init__.py  img.py  msg.py
agenshindot/utils/mihoyo_bbs/: __init__.py  base.py  request.py
agenshindot/utils/mihoyo_bbs/model/: __init__.py  base.py
agenshindot/utils/minigg/: __init__.py  character.py  exception.py  other.py  weapon.py
agenshindot/utils/minigg/model/: __init__.py  character.py  other.py  talent.py  weapon.py
