[tool.poetry]
name = "agenshindot"
version = "0.2.0"
description = "GenshinDot for Python, powered by Graia-Ariadne."
authors = ["MingxuanGame <MingxuanGame@outlook.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/MingxuanGame/AGenshinDot"
repository = "https://github.com/MingxuanGame/AGenshinDot"
documentation = "https://github.com/MingxuanGame/AGenshinDot"

[tool.poetry.dependencies]
python = "^3.8"
graia-ariadne = {extras = ["standard"], version = "^0.8.1"}
tomlkit = "^0.11.2"
prompt-toolkit = "^3.0.30"
SQLAlchemy = "^1.4.39"
aiosqlite = "^0.17.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
